--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
+    "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "history": "^4.7.2",
     "material-ui": "^0.20.1",
