--- a/package.json
+++ b/package.json
@@ -7,21 +7,24 @@
     "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.11",
     "material-ui": "^0.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-geolocated": "^2.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.0",
     "react-scripts": "1.1.0",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "weather-icons": "^1.3.2"
   },
   "scripts": {
-    "start": "set PORT=3006 && react-scripts start",
+    "start": "set PORT=3004 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
