--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^2.2.0",
     "weather-icons": "^1.3.2"
   },
   "scripts": {
