--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "firebase": "^5.7.2",
     "lodash": "^4.17.11",
     "material-ui": "^0.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-geolocated": "^2.4.0",
+    "react-loader-spinner": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.0",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.0",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
