--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "weather-icons": "^1.3.2"
   },
   "scripts": {
-    "start": "set PORT=3004 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
