--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^5.7.2",
     "lodash": "^4.17.11",
     "material-ui": "^0.20.1",
+    "material-ui-upload": "^1.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-geolocated": "^2.4.0",
